--- a/interview-frontend/src/app/components/form/form.component.html
+++ b/interview-frontend/src/app/components/form/form.component.html
@@ -1,48 +1,63 @@
 <form class='form-container'
     [formGroup]="citiesForm"
     (ngSubmit)="onSubmit()">
-    <div class='title'>Search for German Cities by:</div>
+    <div class='title'>Search for German Cities by name, uuid or count:</div>
 
     <div class="search-container">
-        <input class='search-input'
-            type="text"
-            placeholder='Type to search for a city'
-            formControlName='searchValueControl'
-            (change)="onTextInputChange($event)">
-        <button type="submit">Search</button>
+        <div class="search-input-container">
+            <input class='search-input'
+                type="text"
+                placeholder="{{searchPlaceholder}}"
+                formControlName='searchValueControl'
+                (change)="onTextInputChange($event)">
+            <button type="submit">Search</button>
+        </div>
+
+        <div class="radial-button-container">
+            <div class="radial-label">
+                <input type="radio"
+                    id='city-name'
+                    formControlName='searchValueTypeControl'
+                    value="byName"
+                    (change)="onChangeSearchType($event)"
+                    required>
+                <label for='city-name'>City Name</label>
+            </div>
+
+            <div class="radial-label">
+                <input type="radio"
+                    id='uuid'
+                    formControlName='searchValueTypeControl'
+                    value='byUuid'
+                    (change)="onChangeSearchType($event)"
+                    required>
+                <label for='uuid'
+                    for="uuid">UUID</label>
+            </div>
+
+            <div class="radial-label">
+                <input type="radio"
+                    id='count'
+                    formControlName='searchValueTypeControl'
+                    value='byCount'
+                    (change)="onChangeSearchType($event)"
+                    required>
+                <label for='count'>Count</label>
+            </div>
+        </div>
     </div>
 
-    <div class="radial-button-container">
-        <div class="radial-label">
-            <input type="radio"
-                id='city-name'
-                formControlName='searchValueTypeControl'
-                value="byName"
-                (change)="onChangeSearchParameter($event)">
-            <label for='city-name'>City Name</label>
-        </div>
-
-        <div class="radial-label">
-            <input type="radio"
-                id='uuid'
-                formControlName='searchValueTypeControl'
-                value='byUuid'
-                (change)="onChangeSearchParameter($event)">
-            <label for='uuid'
-                for="uuid">UUID</label>
-        </div>
-
-        <div class="radial-label">
-            <input type="radio"
-                id='count'
-                formControlName='searchValueTypeControl'
-                value='byCount'
-                (change)="onChangeSearchParameter($event)">
-            <label for='count'>Count</label>
-        </div>
-
+    <div *ngIf="warningMessage.length > 0"
+        class='warning-text'>
+        {{warningMessage}}
     </div>
 
-    <app-table [cities]="cities"></app-table>
+    <app-table *ngIf="isResponse"
+        [cities]="cities"></app-table>
+
+    <div *ngIf="errorMessage.length > 0"
+        class="title">
+        {{errorMessage}}
+    </div>
 
 </form>
