added pagination, simple loader, basic styles, change deprecated observables subscribe, handle server down, and reset to page one on new search

--- a/interview-frontend/src/app/components/form/form.component.html
+++ b/interview-frontend/src/app/components/form/form.component.html
@@ -46,19 +46,21 @@
             </div>
         </div>
     </div>
+    <div *ngIf="isLoading"
+        class="title loading">Loading ....</div>
 
-    <div *ngIf="warningMessage && !errorMessage"
-        class='warning-text'>
-        {{warningMessage}}
+    <div *ngIf="!isLoading">
+        <div *ngIf="warningMessage && !errorMessage"
+            class='warning-text'>
+            {{warningMessage}}
+        </div>
+
+        <app-table *ngIf="isResponse"
+            [cities]="citiesResponse"></app-table>
+
+        <div *ngIf="errorMessage"
+            class="title error-message">
+            {{errorMessage}}
+        </div>
     </div>
-
-    <app-table *ngIf="
-        isResponse"
-        [cities]="citiesResponse"></app-table>
-
-    <div *ngIf="errorMessage"
-        class="title error-message">
-        {{errorMessage}}
-    </div>
-
 </form>
