--- a/interview-frontend/src/app/components/form/table/table.component.scss
+++ b/interview-frontend/src/app/components/form/table/table.component.scss
@@ -25,3 +25,11 @@
   border-style: solid;
   border-bottom: none;
 }
+
+.paginator {
+  position: fixed;
+  margin-top: 140px;
+  height: 50px;
+  display: flex;
+  margin-left: 30px;
+}
